--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Charity Foundation</title>
+        <title>Overcoming Adversity Cariño Scholarship Foundation</title>
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     </head>
       
-    <body data-new-gr-c-s-check-loaded="14.1215.0" data-gr-ext-installed="" data-new-gr-c-s-loaded="14.1215.0">
+    <body>
       <header>
-        <div class="content-container">
-          <img src="assets/ODCS LOGO SIN FONDO.PNG" alt="logo">
-          <h1>Overcoming Adversity Cariño Scholarship</h1>
+        <div class="center-img">
+            <img src="assets/ODCS LOGO SIN FONDO.PNG" alt="logo">
         </div>
+        <h1>Overcoming Adversity Cariño Scholarship Foundation</h1>
       </header>
       <nav>
         <a href="#about">About</a>
