--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
       <header>
         <div class="center-img">
-            <img src="assets/ODCS LOGO SIN FONDO.PNG" alt="logo">
+          <img src="assets/ODCS LOGO SIN FONDO.PNG" alt="logo">
         </div>
         <h1>Overcoming Adversity Cariño Scholarship Foundation</h1>
       </header>
@@ -19,6 +19,7 @@
         <a href="#about">About</a>
         <a href="#winners">Winners</a>
         <a href="#board">Board</a>
+        <a href="#join">Join Us</a>
         <a href="donate-link.html" style="color:#095140">Donate Now</a>
       </nav>
     
