--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Overcoming Adversity Cariño Scholarship Foundation</h1>
       </header>
       <nav>
-        <a href="#about">About</a>
+        <a href="#about">About Us</a>
         <a href="#winners">Winners</a>
         <a href="#board">Board</a>
         <a href="#join">Join Us</a>
