--- a/index.html
+++ b/index.html
@@ -42,13 +42,20 @@
             </div>
             <div class="indent">
                 <h2>Founder</h2>
-                <p>Jonnathan Yepez Cariño is a visionary leader and community advocate dedicated to empowering others, 
-                particularly within the Latinx community. As the Founder of the Overcoming Adversity Cariño Scholarship, 
-                he champions educational opportunities for underserved students. He serves as CEO of Sin Fronteras Consulting LLC, 
-                offering strategic guidance to businesses and nonprofits. Jonnathan is VP Sr. Branch Manager for Pacific Premier Bank, 
-                driving financial inclusion and growth. Passionate about supporting his Latinx community, he works to ensure access to 
-                tools and resources for building generational wealth. He also leads as Co-President of the 
-                Greater Marysville Tulalip Chamber Foundation, and member of the Snohomish Community Foundation’s Finance Committee and board. </p>
+                <div class="content-container">
+                    <div class="circle-frame">
+                        <img src="https://images.unsplash.com/photo-1500519082938-cdd6b2f39de6?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MzUwMTc4NTJ8&amp;ixlib=rb-4.0.3&amp;q=85" alt="Scholarship winner">
+                    </div>
+                    <p>
+                        <strong>Jonnathan Yepez Cariño</strong> is a visionary leader and community advocate dedicated to empowering others, 
+                        particularly within the Latinx community. As the Founder of the Overcoming Adversity Cariño Scholarship, 
+                        he champions educational opportunities for underserved students. He serves as CEO of Sin Fronteras Consulting LLC, 
+                        offering strategic guidance to businesses and nonprofits. Jonnathan is VP Sr. Branch Manager for Pacific Premier Bank, 
+                        driving financial inclusion and growth. Passionate about supporting his Latinx community, he works to ensure access to 
+                        tools and resources for building generational wealth. He also leads as Co-President of the 
+                        Greater Marysville Tulalip Chamber Foundation, and member of the Snohomish Community Foundation’s Finance Committee and board. 
+                    </p>
+                </div>
             </div>
         </section>
     
@@ -59,7 +66,7 @@
                 <div class="box">
                 <div class="content-container">
                     <div class="circle-frame">
-                    <img src="https://images.unsplash.com/photo-1500519082938-cdd6b2f39de6?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MzUwMTc4NTJ8&amp;ixlib=rb-4.0.3&amp;q=85" alt="Scholarship winner">
+                        <img src="https://images.unsplash.com/photo-1500519082938-cdd6b2f39de6?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MzUwMTc4NTJ8&amp;ixlib=rb-4.0.3&amp;q=85" alt="Scholarship winner">
                     </div>
                     <p>some description/info/quotes</p>
                 </div>
@@ -67,7 +74,7 @@
                 <div class="box">
                 <div class="content-container">
                     <div class="circle-frame">
-                    <img src="https://images.unsplash.com/photo-1500519082938-cdd6b2f39de6?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MzUwMTc4NTJ8&amp;ixlib=rb-4.0.3&amp;q=85" alt="Scholarship winner">
+                        <img src="https://images.unsplash.com/photo-1500519082938-cdd6b2f39de6?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MzUwMTc4NTJ8&amp;ixlib=rb-4.0.3&amp;q=85" alt="Scholarship winner">
                     </div>
                     <p>some description/info/quotes</p>
                 </div>
@@ -79,22 +86,22 @@
             <h2>Board of Directors</h2>
             <p>Our team:</p>
             <div class="content-container">
-            <div class="box">
-                <div class="content-container">
-                <div class="circle-frame">
-                    <img src="https://images.unsplash.com/photo-1500519082938-cdd6b2f39de6?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MzUwMTc4NTJ8&amp;ixlib=rb-4.0.3&amp;q=85" alt="Scholarship winner">
+                <div class="box">
+                    <div class="content-container">
+                        <div class="circle-frame">
+                            <img src="assets/0.png" alt="Scholarship winner">
+                        </div>
+                        <p>some description/info/quotes</p>
+                    </div>
                 </div>
-                <p>some description/info/quotes</p>
+                <div class="box">
+                    <div class="content-container">
+                        <div class="circle-frame">
+                            <img src="https://images.unsplash.com/photo-1500519082938-cdd6b2f39de6?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MzUwMTc4NTJ8&amp;ixlib=rb-4.0.3&amp;q=85" alt="Scholarship winner">
+                        </div>
+                        <p>some description/info/quotes</p>
+                    </div>
                 </div>
-            </div>
-            <div class="box">
-                <div class="content-container">
-                <div class="circle-frame">
-                    <img src="https://images.unsplash.com/photo-1500519082938-cdd6b2f39de6?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MzUwMTc4NTJ8&amp;ixlib=rb-4.0.3&amp;q=85" alt="Scholarship winner">
-                </div>
-                <p>some description/info/quotes</p>
-                </div>
-            </div>
             </div>
         </section>
 
