--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="center-img">
-                <img src="assets/ODCS LOGO SIN FONDO.PNG" alt="logo">
+                <img src="assets/logo.png" alt="logo">
             </div>
             <h1>Overcoming Adversity Cariño Scholarship Foundation</h1>
         </header>
@@ -43,10 +43,10 @@
             <div class="indent">
                 <h2>Founder</h2>
                 <div class="content-container">
-                    <div class="circle-frame">
-                        <img src="https://images.unsplash.com/photo-1500519082938-cdd6b2f39de6?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MzUwMTc4NTJ8&amp;ixlib=rb-4.0.3&amp;q=85" alt="Scholarship winner">
+                    <div class="circle-frame-large">
+                        <img src="assets/founder.jpg" alt="founder">
                     </div>
-                    <p>
+                    <p style="margin: 0;">
                         <strong>Jonnathan Yepez Cariño</strong> is a visionary leader and community advocate dedicated to empowering others, 
                         particularly within the Latinx community. As the Founder of the Overcoming Adversity Cariño Scholarship, 
                         he champions educational opportunities for underserved students. He serves as CEO of Sin Fronteras Consulting LLC, 
@@ -89,7 +89,7 @@
                 <div class="box">
                     <div class="content-container">
                         <div class="circle-frame">
-                            <img src="assets/0.png" alt="Scholarship winner">
+                            <img src="assets/board1.png" alt="Scholarship winner">
                         </div>
                         <p>some description/info/quotes</p>
                     </div>
