--- a/index.html
+++ b/index.html
@@ -71,14 +71,6 @@
                     <p>some description/info/quotes</p>
                 </div>
                 </div>
-                <div class="box">
-                <div class="content-container">
-                    <div class="circle-frame">
-                        <img src="https://images.unsplash.com/photo-1500519082938-cdd6b2f39de6?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MzUwMTc4NTJ8&amp;ixlib=rb-4.0.3&amp;q=85" alt="Scholarship winner">
-                    </div>
-                    <p>some description/info/quotes</p>
-                </div>
-                </div>
             </div>
         </section>
     
@@ -89,7 +81,7 @@
                 <div class="box">
                     <div class="content-container">
                         <div class="circle-frame">
-                            <img src="assets/board1.png" alt="Scholarship winner">
+                            <img src="assets/board_1.png" alt="Board member photo">
                         </div>
                         <p>some description/info/quotes</p>
                     </div>
@@ -97,9 +89,13 @@
                 <div class="box">
                     <div class="content-container">
                         <div class="circle-frame">
-                            <img src="https://images.unsplash.com/photo-1500519082938-cdd6b2f39de6?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MzUwMTc4NTJ8&amp;ixlib=rb-4.0.3&amp;q=85" alt="Scholarship winner">
+                            <img src="assets/board_2.jpg" alt="Board member photo">
                         </div>
-                        <p>some description/info/quotes</p>
+                        <div>
+                            <p style="margin: 0;">Born and raised in Jamaica, <strong>Carla</strong>’s journey has been shaped by resilience, adaptability, and a passion for helping to creating opportunities for others. Carla is a dedicated advocate for financial empowerment and diversity, and takes inspiration from Jamaica’s motto, “Out of Many, One People,”.</p>
+                            <p>With a background in banking, capital markets, and corporate finance, Carla is committed to breaking barriers and championing equity in education; through her commitment to supporting underrepresented communities in achieving stability and success.</p>
+                            <p>Carla is honored to contribute to a mission that helps minority students unlock their potential by empowering the future generations to thrive.</p>
+                        </div>
                     </div>
                 </div>
             </div>
