--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h3>Founder</h3>
                 <div class="content-container" style="flex-direction: column;">
                     <div class="circle-frame-large">
-                        <img src="assets/board_photo/jonnathan.jpg" alt="founder">
+                        <img src="assets/board_photo/jonnathan.jpg" alt="Jonnathan Yepez Cariño">
                     </div>
                     <p style="background: beige; border-radius: 15px; padding: 20px; margin: 0;">
                         <strong>Jonnathan Yepez Cariño</strong> is a visionary leader and community advocate dedicated to empowering others, particularly within the Latinx community.
@@ -95,7 +95,7 @@
                 <div class="content-container" style="flex-direction: column;">
                     <div class="content-container">
                         <div class="circle-frame">
-                            <img src="assets/board_photo/jaime.jpg" alt="Board member photo">
+                            <img src="assets/board_photo/jaime.jpg" alt="Jaime Méndez">
                         </div>
                         <div style="background: beige; border-radius: 15px; padding: 20px;">
                             <p style="margin: 0;">
@@ -109,7 +109,7 @@
                     </div>
                     <div class="content-container">
                         <div class="circle-frame">
-                            <img src="assets/board_photo/laurie.jpg" alt="Board member photo">
+                            <img src="assets/board_photo/laurie.jpg" alt="Laurie Barbosa">
                         </div>
                         <div style="background: beige; border-radius: 15px; padding: 20px;">
                             <p style="margin: 0;">
@@ -123,7 +123,7 @@
                     </div>
                     <div class="content-container">
                         <div class="circle-frame">
-                            <img src="assets/board_photo/griselda.jpg" alt="Board member photo">
+                            <img src="assets/board_photo/griselda.jpg" alt="Griselda Guevara-Cruz">
                         </div>
                         <div style="background: beige; border-radius: 15px; padding: 20px;">
                             <p style="margin: 0;">
@@ -139,7 +139,32 @@
                     </div>
                     <div class="content-container">
                         <div class="circle-frame">
-                            <img src="assets/board_photo/eric.jpg" alt="Board member photo">
+                            <img src="assets/board_photo/jovani.jpg" alt="Jovani">
+                        </div>
+                        <div style="background: beige; border-radius: 15px; padding: 20px;">
+                            <p style="margin: 0;">
+                                A driven and charismatic leader, <strong>Jovani</strong> has a natural ability to connect with people and deliver meaningful solutions. Born outside the U.S., he overcame the challenges of being an undocumented immigrant with resilience and determination, turning obstacles into opportunities for growth.
+                                </br></br>
+                                Family is his foundation, fueling his ambition and dedication to success. Currently pursuing a Bachelor’s degree in Business Science and Administration, Jovani is committed to continuous learning, personal development, and making a lasting impact.
+                                </br></br>
+                                With a passion for giving back, he aspires to use his experiences to empower others, build meaningful relationships, and drive positive change. His work ethic, integrity, and relentless pursuit of excellence make him a true leader in the making!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="content-container">
+                        <div class="circle-frame">
+                            <img src="assets/board_photo/dawn.jpg" alt="Jovani">
+                        </div>
+                        <div style="background: beige; border-radius: 15px; padding: 20px;">
+                            <p style="margin: 0;">
+                                <strong>Dawn</strong> is a dedicated banking professional with eight years of experience and a deep passion for community service . Her leadership journey began in hospitality, where she engaged with amazing nonprofits like Housing Hope, Junior Achievement, Rotary, and the Chamber.
+                                </br></br> Her commitment to uplifting others aligns perfectly with our mission, and she is eager to help expand our impact! Beyond her career and volunteer work, Dawn is a proud single mother and an adventure enthusiast —always exploring the PNW with her incredible child!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="content-container">
+                        <div class="circle-frame">
+                            <img src="assets/board_photo/eric.jpg" alt="Eric Jimenez">
                         </div>
                         <div style="background: beige; border-radius: 15px; padding: 20px;">
                             <p style="margin: 0;">
@@ -151,12 +176,14 @@
                     </div>
                     <div class="content-container">
                         <div class="circle-frame">
-                            <img src="assets/board_photo/carla.jpg" alt="Board member photo">
+                            <img src="assets/board_photo/carla.jpg" alt="Carla">
                         </div>
                         <div style="background: beige; border-radius: 15px; padding: 20px;">
-                            <p style="margin: 0;">Born and raised in Jamaica, <strong>Carla</strong>’s journey has been shaped by resilience, adaptability, and a passion for helping to creating opportunities for others. Carla is a dedicated advocate for financial empowerment and diversity, and takes inspiration from Jamaica’s motto, “Out of Many, One People,”.</p>
-                            <p>With a background in banking, capital markets, and corporate finance, Carla is committed to breaking barriers and championing equity in education; through her commitment to supporting underrepresented communities in achieving stability and success.</p>
-                            <p>Carla is honored to contribute to a mission that helps minority students unlock their potential by empowering the future generations to thrive.</p>
+                            <p style="margin: 0;">
+                                Born and raised in Jamaica, <strong>Carla</strong>’s journey has been shaped by resilience, adaptability, and a passion for helping to creating opportunities for others. Carla is a dedicated advocate for financial empowerment and diversity, and takes inspiration from Jamaica’s motto, “Out of Many, One People,”.
+                                </br></br>With a background in banking, capital markets, and corporate finance, Carla is committed to breaking barriers and championing equity in education; through her commitment to supporting underrepresented communities in achieving stability and success.
+                                </br></br>Carla is honored to contribute to a mission that helps minority students unlock their potential by empowering the future generations to thrive.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -169,7 +196,7 @@
             <h2>Join Us</h2>
             <h3 style="text-align: center;"><a href="" target="_blank" rel="noopener noreferrer">Be A Sponsor</a> or <a href="" target="https://6556a8d1-8bf8-4475-a7f1-68f8394bbaac.paylinks.godaddy.com/OA-Carino-Scholarship" rel="noopener noreferrer">Donate Now!</a></h3>
             <div class="indent">
-                <h3>Previous Sponsor:</h3>
+                <h3>Previous Sponsors:</h3>
                 <div class="content-container" style="align-items: center; justify-content: space-evenly; gap: 0px;">
                     <div class="box">
                         <img class="logo-small" src="assets/logo/big_bounce_bros_logo.jpg" alt="sponsor 1">
