update, dynamic slide

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <h3 style="text-align: center;"><a href="" target="_blank" rel="noopener noreferrer">Be A Sponsor</a> or <a href="" target="https://6556a8d1-8bf8-4475-a7f1-68f8394bbaac.paylinks.godaddy.com/OA-Carino-Scholarship" rel="noopener noreferrer">Donate Now!</a></h3>
             <div class="indent">
                 <h3>Previous Sponsors:</h3>
-                <div class="content-container" style="align-items: center; justify-content: space-evenly; gap: 0px;">
+                <div class="content-container" style="align-items: center; justify-content: space-between; gap: 0px; flex-direction: row;">
                     <div class="box">
                         <img class="logo-small" src="assets/logo/big_bounce_bros_logo.jpg" alt="sponsor 1">
                     </div>
