--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="slide fade">
-                    <video controls autoplay muted loop disablepictureinpicture controlslist="nofullscreen nodownload noremoteplayback noplaybackrate foobar">
+                    <video controls autoplay muted loop disablepictureinpicture playsinline controlslist="nofullscreen nodownload noremoteplayback noplaybackrate foobar">
                         <source src="assets/event/event_vid.mp4" type="video/mp4">
                     </video>
                 </div>
