update footer link color

--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
         <section style="padding-top: 20px; padding-bottom: 60px;">
             <h3 style="color: white;">Contact At:</h3>
             <div style="padding-left: 20px;">
-                <p style="font-weight: 300;">
+                <p id="footer-text" style="font-weight: 300;">
                     Phone: 503.380.0886<br>
                     email: oacarinosf@gmail.com<br>
                     EIN:85-2236985 (Fiscal Sponsor "Keep Dreams Alive Foundation")<br>
-                    <a href="https://keepdreamsalive.org" target="_blank" rel="noopener noreferrer" style="color: #F1D395;">https://keepdreamsalive.org</a>
+                    <a href="https://keepdreamsalive.org" target="_blank" rel="noopener noreferrer">https://keepdreamsalive.org</a>
                 </p>
             </div>
         </section>
