update donate link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
               </div>
-              <br>
+              <hr id="slide">
               
               <!-- The dots/circles -->
               <div style="text-align:center">
@@ -194,7 +194,7 @@
 
         <section id="join" style="background: linear-gradient(145deg, #F1D395, white);">
             <h2>Join Us</h2>
-            <h3 style="text-align: center;"><a href="" target="_blank" rel="noopener noreferrer">Be A Sponsor</a> or <a href="" target="https://6556a8d1-8bf8-4475-a7f1-68f8394bbaac.paylinks.godaddy.com/OA-Carino-Scholarship" rel="noopener noreferrer">Donate Now!</a></h3>
+            <h3 style="text-align: center;"><a href="" target="_blank" rel="noopener noreferrer">Be A Sponsor</a> or <a href="https://6556a8d1-8bf8-4475-a7f1-68f8394bbaac.paylinks.godaddy.com/OA-Carino-Scholarship" target="_blank" rel="noopener noreferrer">Donate Now!</a></h3>
             <div class="indent">
                 <h3>Previous Sponsors:</h3>
                 <div class="content-container" style="align-items: center; justify-content: space-between; gap: 0px; flex-direction: row;">
@@ -236,7 +236,7 @@
                 <p id="footer-text" style="font-weight: 300;">
                     Phone: 503.380.0886<br>
                     email: oacarinosf@gmail.com<br>
-                    EIN:85-2236985 (Fiscal Sponsor "Keep Dreams Alive Foundation")<br>
+                    EIN: 85-2236985 (Fiscal Sponsor "Keep Dreams Alive Foundation")<br>
                     <a href="https://keepdreamsalive.org" target="_blank" rel="noopener noreferrer">https://keepdreamsalive.org</a>
                 </p>
             </div>
