--- a/index.html
+++ b/index.html
@@ -51,18 +51,29 @@
                 <!-- Next and previous buttons -->
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
-              </div>
-              <hr id="slide">
+            </div>
+            <hr id="slide">
               
-              <!-- The dots/circles -->
-              <div style="text-align:center">
-                <span class="dot active" onclick="currentSlide(1)"></span>
-                <span class="dot" onclick="currentSlide(2)"></span>
-                <span class="dot" onclick="currentSlide(3)"></span>
-                <span class="dot" onclick="currentSlide(4)"></span>
-                <span class="dot" onclick="currentSlide(5)"></span>
-              </div>
+            <!-- The dots/circles -->
+            <div style="text-align:center">
+            <span class="dot active" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+            </div>
+
+            <br>    
+            <br>
+            
+            <hr class="rounded"></hr>
+            <section style="padding-left: 10vh; padding-right: 10vh;">
+                <p style="text-align: center; color: #107F63;">"My name is Karla, and I am 19 years old. My ultimate goal is to become a psychologist or work in early childhood education, where I can make a meaningful impact on children’s lives. The Overcoming Adversity Cariño Scholarship has been a tremendous blessing, lifting the financial burden off my shoulders and allowing me to focus entirely on my education. With this support, I can continue expanding my knowledge and pursuing my passion without the constant worry of financial strain. This scholarship is not just assistance—it’s an opportunity to build a future where I can give back and make a difference."</p>
+                <p style="text-align: center; font-size: 20px; color: #125f4b;"><i>Karla — Overcoming Adversity Cariño Scholarship Winner</i></p>
+            </section>
         </section>
+
+        <hr class="rounded"></hr>
 
         <section id="about"> 
             <h2 style="margin-bottom: 40px;">About Us</h2>
