add statefarm logo

--- a/index.html
+++ b/index.html
@@ -210,19 +210,19 @@
                 <h3>Previous Sponsors:</h3>
                 <div class="content-container" style="align-items: center; justify-content: space-between; gap: 0px; flex-direction: row;">
                     <div class="box">
-                        <img class="logo-small" src="assets/logo/big_bounce_bros_logo.jpg" alt="sponsor 1">
+                        <img class="logo-small" src="assets/logo/big_bounce_bros_logo.jpg" alt="big_bounce_bros">
                     </div>
                     <div class="box">
-                        <img class="logo-small" src="assets/logo/avance_logo.PNG" alt="sponsor 2">
+                        <img class="logo-small" src="assets/logo/avance_logo.PNG" alt="avance">
                     </div>
                     <div class="box">
-                        <img class="logo-small" src="assets/logo/jays_logo.jpg" alt="sponsor 3">
+                        <img class="logo-small" src="assets/logo/jays_logo.jpg" alt="jays">
                     </div>
                     <div class="box">
-                        <img class="logo-small" src="assets/logo/miv_logo.jpg" alt="sponsor 4">
+                        <img class="logo-small" src="assets/logo/miv_logo.jpg" alt="miv">
                     </div>
                     <div class="box">
-                        <img class="logo-small" src="assets/logo/symmetra_logo.JPG" alt="sponsor 4">
+                        <img class="logo-small" src="assets/logo/symmetra_logo.JPG" alt="symmetra">
                     </div>
                     <div class="box">
                         <img class="logo-small" src="assets/logo/sponser_1_logo.jpg" alt="sponsor 4">
@@ -231,7 +231,10 @@
                         <img class="logo-small" src="assets/logo/sponser_2_logo.jpg" alt="sponsor 4">
                     </div>
                     <div class="box">
-                        <img class="logo-small" src="assets/logo/keepdreamalive_logo.png" alt="sponsor 4">
+                        <img class="logo-small" src="assets/logo/keepdreamalive_logo.png" alt="keepdreamalive">
+                    </div>
+                    <div class="box">
+                        <img class="logo-small" src="assets/logo/statefarm.jpeg" alt="statefarm">
                     </div>
                 </div>
             </div>
