add applicatopn link

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         </nav>
     
       <main>
+        <section style="background: linear-gradient(150deg, rgba(245, 245, 220, 0.871), transparent); padding-bottom: 40px;">
+            <h2 style="text-align: center;"><a href="https://form.jotform.com/250978031316153" target="_blank" rel="noopener noreferrer">Application Link</a></h2>
+        </section>
+
+        <hr class="rounded"></hr>
+
         <section style="background: linear-gradient(145deg, #F1D395, white);">
             <div class="slideshow-container">
                 <div class="slide fade"  style="display: block;">
