add instagram to nav and footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="styles.css">
         <script src="script.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -22,6 +23,7 @@
             <a href="#join">Join Us</a>
             <a href="https://form.jotform.com/250978031316153" target="_blank" rel="noopener noreferrer" style="color:#107F63;">Application</a>
             <a href="https://6556a8d1-8bf8-4475-a7f1-68f8394bbaac.paylinks.godaddy.com/OA-Carino-Scholarship" target="_blank" rel="noopener noreferrer" style="color:#107F63;">Donate Now</a>
+            <a href="https://www.instagram.com/oacarinosf/" target="_blank" class="fa"><img src="assets/logo/ins.png"></a>
         </nav>
     
       <main>
@@ -223,10 +225,13 @@
       <hr class="solid">
       
       <footer>
-        <section style="padding-top: 20px; padding-bottom: 60px;">
-            <h3 style="color: white;">Contact At:</h3>
+        <section id="contact">
+            <div class="content-container" style="flex-direction: row; justify-content: space-between; align-items: center; row-gap: 0;">
+                <h3 style="color: white; flex: 1;" >Contact At:</h3>
+                <div style="margin: 0; flex: 1;"><a href="https://www.instagram.com/oacarinosf/" target="_blank" class="fa"><img src="assets/logo/ins.png"></a></div>
+            </div>
             <div style="padding-left: 20px;">
-                <p id="footer-text" style="font-weight: 300;">
+                <p>
                     Phone: 503.380.0886<br>
                     email: oacarinosf@gmail.com<br>
                     EIN: 85-2236985 (Fiscal Sponsor "Keep Dreams Alive Foundation")<br>
