--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Empowering students through scholarships and educational support.">
+        <meta name="robots" content="index, follow">
+        <link rel="canonical" href="https://carino-scholarship-foundation.vercel.app/" />
         <title>Overcoming Adversity Cariño Scholarship Foundation</title>
         <link rel="stylesheet" href="styles.css">
         <script src="script.js"></script>
