--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Empowering students through scholarships and educational support.">
         <meta name="robots" content="index, follow">
+        <meta name="google-site-verification" content="ijDA_TCnXzpSPmXYc5VYlimkJYTR4ZNqf2gt6bbUMTE" />
         <link rel="canonical" href="https://carino-scholarship-foundation.vercel.app/" />
         <title>Overcoming Adversity Cariño Scholarship Foundation</title>
         <link rel="stylesheet" href="styles.css">
