--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Empowering students through scholarships and educational support.">
+        <meta name="description" content="Overcoming Adversity Cariño Scholarship Foundation is devoted to uplifting Latinx students who are excluded from federal aid, offering financial support and heartfelt mentorship.">
         <meta name="robots" content="index, follow">
         <meta name="google-site-verification" content="ijDA_TCnXzpSPmXYc5VYlimkJYTR4ZNqf2gt6bbUMTE" />
         <link rel="canonical" href="https://carino-scholarship-foundation.vercel.app/" />
