--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
         <meta name="description" content="Overcoming Adversity Cariño Scholarship Foundation is devoted to uplifting Latinx students who are excluded from federal aid, offering financial support and heartfelt mentorship.">
         <meta name="robots" content="index, follow">
         <meta name="google-site-verification" content="ijDA_TCnXzpSPmXYc5VYlimkJYTR4ZNqf2gt6bbUMTE" />
+        <title>Overcoming Adversity Cariño Scholarship</title>
         <link rel="canonical" href="https://carino-scholarship-foundation.vercel.app/" />
-        <title>Overcoming Adversity Cariño Scholarship Foundation</title>
+        <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+        <link rel="shortcut icon" href="/assets/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
+        <link rel="manifest" href="/assets/site.webmanifest" />
         <link rel="stylesheet" href="styles.css">
         <script src="script.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
