--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <body>
         <header>
             <div class="center-img">
-                <img class="logo-large" src="assets/logo/carino_logo.png" alt="logo">
+                <img class="logo-large" src="/assets/logo/carino_logo.png" alt="logo">
             </div>
             <h1>Overcoming Adversity Cariño Scholarship Foundation</h1>
         </header>
