--- a/index.html
+++ b/index.html
@@ -118,9 +118,11 @@
                         <img src="assets/board_photo/jonnathan.jpg" alt="Jonnathan Yepez Cariño">
                     </div>
                     <p class="bio">
-                        <strong>Jonnathan Yepez Cariño</strong> is a visionary leader and community advocate dedicated to empowering others, particularly within the Latinx community.
+                        <strong>Jonnathan Yepez Cariño</strong> is a visionary leader, DACA recipient, and fierce advocate for equity and opportunity within the Latinx community.
                         </br></br>
-                        As the Founder of the Overcoming Adversity Cariño Scholarship, he champions educational opportunities for underserved students. He serves as CEO of Sin Fronteras Consulting LLC, offering strategic guidance to businesses and nonprofits. Jonnathan is VP Sr. Branch Manager for Pacific Premier Bank, driving financial inclusion and growth. Passionate about supporting his Latinx community, he works to ensure access to tools and resources for building generational wealth. He also leads as Co-President of the Greater Marysville Tulalip Chamber Foundation, and member of the Snohomish Community Foundation’s Finance Committee and board. 
+                        Growing up without access to the resources, mentorship, or guidance so many students need, Jonnathan knows firsthand the challenges immigrant and first-generation youth face. It was that experience—and the pain of navigating those struggles alone—that inspired him to create the Overcoming Adversity Cariño Scholarship Foundation: a movement rooted in love, community, and the belief that no student should be left behind simply because of their status or circumstance.
+                        </br></br>
+                        Today, Jonnathan leads as Founder of the Foundation and CEO of Sin Fronteras Consulting LLC, providing strategic support to nonprofits and businesses committed to impact. He also serves as Co-President of the Greater Marysville Tulalip Chamber Foundation and as a finance committee member and board member for the Snohomish Community Foundation—always working to expand access to education, opportunity, and generational wealth for the communities he represents.
                     </p>
                 </div>
 
