add sponser logo

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div>
             </div>
 
-            <div class="indent">
+            <div class="indent" id="board_member">
                 <h3>Founder</h3>
                 <div class="content-container" style="flex-direction: column;">
                     <div class="circle-frame-large">
@@ -218,7 +218,7 @@
             <h3 style="text-align: center;"><a href="" target="_blank" rel="noopener noreferrer">Be A Sponsor</a> or <a href="https://6556a8d1-8bf8-4475-a7f1-68f8394bbaac.paylinks.godaddy.com/OA-Carino-Scholarship" target="_blank" rel="noopener noreferrer">Donate Now!</a></h3>
             <div class="indent">
                 <h3>Previous Sponsors:</h3>
-                <div class="content-container" style="align-items: center; justify-content: space-between; gap: 0px; flex-direction: row;">
+                <div class="content-container" id="sponsers">
                     <img class="logo-small box" src="/assets/logo/big_bounce_bros_logo.jpg" alt="big_bounce_bros">
                     <img class="logo-small box" src="/assets/logo/avance_logo.PNG" alt="avance">
                     <img class="logo-small box" src="/assets/logo/jays_logo.jpg" alt="jays">
@@ -228,6 +228,7 @@
                     <img class="logo-small box" src="/assets/logo/sponser_2_logo.jpg" alt="sponsor 4">
                     <img class="logo-small box" src="/assets/logo/keepdreamalive_logo.png" alt="keepdreamalive">
                     <img class="logo-small box" src="/assets/logo/statefarm.jpeg" alt="statefarm">
+                    <img class="logo-small box" src="/assets/logo/lacazuela_logo.png" alt="la cazuela restaurant">
                 </div>
             </div>
         </section>
