add se habla media logo

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
             <br>
             
             <hr class="rounded" style="border-color: darkkhaki;">
-            <div style="margin: 0rem 2rem; margin-top: 2rem;">
+            <div id="winner">
                 <p style="text-align: center; color: #107F63;">"My name is Karla, and I am 19 years old. My ultimate goal is to become a psychologist or work in early childhood education, where I can make a meaningful impact on children’s lives. The Overcoming Adversity Cariño Scholarship has been a tremendous blessing, lifting the financial burden off my shoulders and allowing me to focus entirely on my education. With this support, I can continue expanding my knowledge and pursuing my passion without the constant worry of financial strain. This scholarship is not just assistance—it’s an opportunity to build a future where I can give back and make a difference."</p>
-                <p style="text-align: center; font-size: 20px; color: #125f4b;"><i>Karla — Overcoming Adversity Cariño Scholarship Winner</i></p>
+                <h4 style="text-align: center; color: #125f4b;"><i>Karla — Overcoming Adversity Cariño Scholarship Winner</i></p>
             </div>
         </section>
 
@@ -229,6 +229,7 @@
                     <img class="logo-small box" src="/assets/logo/keepdreamalive_logo.png" alt="keepdreamalive">
                     <img class="logo-small box" src="/assets/logo/statefarm.jpeg" alt="statefarm">
                     <img class="logo-small box" src="/assets/logo/lacazuela_logo.png" alt="la cazuela restaurant">
+                    <img class="logo-small box" src="/assets/logo/se_habla.jpeg" alt="se habla media">
                 </div>
             </div>
         </section>
