--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <h2>Join Us</h2>
             <h3 style="text-align: center;"><a href="" target="_blank" rel="noopener noreferrer">Be A Sponsor</a> or <a href="https://6556a8d1-8bf8-4475-a7f1-68f8394bbaac.paylinks.godaddy.com/OA-Carino-Scholarship" target="_blank" rel="noopener noreferrer">Donate Now!</a></h3>
             <div class="indent">
-                <h3>Previous Sponsors:</h3>
+                <h3>Supporters:</h3>
                 <div class="content-container" id="sponsers">
                     <img class="logo-small box" src="/assets/logo/big_bounce_bros_logo.jpg" alt="big_bounce_bros">
                     <img class="logo-small box" src="/assets/logo/avance_logo.PNG" alt="avance">
@@ -230,6 +230,8 @@
                     <img class="logo-small box" src="/assets/logo/statefarm.jpeg" alt="statefarm">
                     <img class="logo-small box" src="/assets/logo/lacazuela_logo.png" alt="la cazuela restaurant">
                     <img class="logo-small box" src="/assets/logo/se_habla.jpeg" alt="se habla media">
+                    <img class="logo-small box" src="/assets/logo/Martina Guadalupe (Logo).png" alt="martina guadalupe">
+                    <img class="logo-small box" src="/assets/logo/FGATE WELLNESS LOGO.jpeg" alt="fgate wellness">
                 </div>
             </div>
         </section>
